// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Widget /> should not render when the \`type\` prop is invalid 1`] = `
<Widget
  component={null}
  config={
    Object {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "some_widget",
      "width": 12,
    }
  }
/>
`;

exports[`<Widget /> should render an image widget 1`] = `
<Widget
  component={[Function]}
  config={
    Object {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "@shopgate/commerce-widgets/image",
      "width": 12,
    }
  }
>
  <GridItem
    className="css-11tky1j"
    component="div"
    grow={0}
    shrink={1}
  >
    <div
      className="css-11tky1j"
    >
      <div>
        <Suspense
          fallback={<Loading />}
        >
          <MyComponent
            ratio={
              Array [
                12,
                6,
              ]
            }
          >
            <div />
          </MyComponent>
        </Suspense>
      </div>
    </div>
  </GridItem>
</Widget>
`;

exports[`<Widget /> should render an image widget with offset 1`] = `
<Widget
  cellSize={100}
  component={[Function]}
  config={
    Object {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "@shopgate/commerce-widgets/image",
      "width": 6,
    }
  }
>
  <GridItem
    className="css-1fy9kc8"
    component="div"
    grow={0}
    shrink={1}
  >
    <div
      className="css-1fy9kc8"
    >
      <div>
        <Suspense
          fallback={<Loading />}
        >
          <MyComponent
            ratio={
              Array [
                6,
                6,
              ]
            }
          >
            <div />
          </MyComponent>
        </Suspense>
      </div>
    </div>
  </GridItem>
</Widget>
`;
